# digger

./: .gitignore  .gitlab-ci.yml  AUTHORS  Makefile  README.md  Readme.md  codemeta.json  coq2c.cabal  coq2c.hs  digger.cabal  stack.yaml
.ci/: apt-get-and-cache.sh
app/: digger.hs
example/: Example.v  Extraction.v  Internals.c  Internals.h  Internals.v  Makefile  Monad.c  Monad.h  Monad.v  base.h
src/Language/Coq/: Deep.hs  ExtractedAST.hs
